--- a/scripts/install
+++ b/scripts/install
@@ -71,7 +71,7 @@ ynh_script_progression --message="Installing dependencies..." --weight=1
 # Install nodejs
 ynh_install_nodejs --nodejs_version=$NODEJS_VERSION 2>&1
 
-ynh_install_app_dependencies $pkg_dependencies 2>&1
+#ynh_install_app_dependencies $pkg_dependencies 2>&1
 
 # Install Yarn
 ynh_install_extra_app_dependencies --repo="deb https://dl.yarnpkg.com/debian/ stable main" --package="yarn" --key="https://dl.yarnpkg.com/debian/pubkey.gpg" 2>&1
