--- a/scripts/install
+++ b/scripts/install
@@ -129,7 +129,7 @@ chown $app:$app "$final_path/apps/www/.env"
 # BUILD YARN DEPENDENCIES
 #=================================================
 
-pushd "$final_path/apps/www/"
+pushd "$final_path"
 	ynh_use_nodejs
 	ynh_script_progression --message="Cleaning cache... " --weight=3
 	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH yarn cache clean 2>&1
