--- a/scripts/install
+++ b/scripts/install
@@ -15,7 +15,7 @@ source /usr/share/yunohost/helpers
 ynh_script_progression --message="Installing dependencies..." --weight=1
 
 # Install nodejs
-ynh_install_nodejs --nodejs_version=$NODEJS_VERSION 2>&1
+ynh_exec_warn_less ynh_install_nodejs --nodejs_version=$NODEJS_VERSION
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -62,12 +62,10 @@ chown $app:$app "$install_dir/apps/www/.env"
 
 pushd "$install_dir"
 	ynh_use_nodejs
-	ynh_script_progression --message="Cleaning cache... " --weight=3
-	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH yarn cache clean 2>&1
-	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH yarn install --network-timeout 1000000000 2>&1
-	ynh_script_progression --message="Cleaning cache... " --weight=3
-	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH yarn cache clean 2>&1
-	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH yarn build 2>&1
+	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH yarn cache clean
+	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH yarn install --network-timeout 1000000000
+	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH yarn cache clean
+	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH yarn build
 popd
 
 #=================================================
