--- a/scripts/install
+++ b/scripts/install
@@ -21,6 +21,7 @@ ynh_install_nodejs --nodejs_version="$NODEJS_VERSION"
 ynh_script_progression --message="Setting up source files..." --weight=1
 
 ynh_setup_source --dest_dir="$install_dir/sources"
+mkdir -p "$install_dir/bin"
 
 chmod -R o-rwx "$install_dir"
 chown -R "$app:www-data" "$install_dir"
@@ -38,12 +39,14 @@ chown -R "$app:www-data" "$install_dir"
 # BUILD YARN DEPENDENCIES
 #=================================================
 
+ynh_use_nodejs
+ynh_exec_as "$app" corepack enable --install-dir "$install_dir/bin"
+
 pushd "$install_dir/sources"
-	ynh_use_nodejs
-	ynh_exec_warn_less ynh_exec_as "$app" env "$ynh_node_load_PATH" yarn cache clean
-	ynh_exec_warn_less ynh_exec_as "$app" env "$ynh_node_load_PATH" yarn install --network-timeout 1000000000
-	ynh_exec_warn_less ynh_exec_as "$app" env "$ynh_node_load_PATH" yarn cache clean
-	ynh_exec_warn_less ynh_exec_as "$app" env "$ynh_node_load_PATH" yarn build
+	ynh_exec_warn_less ynh_exec_as "$app" env COREPACK_ENABLE_DOWNLOAD_PROMPT=0 "$ynh_node_load_PATH" "$install_dir/bin/yarn" cache clean
+	ynh_exec_warn_less ynh_exec_as "$app" env "$ynh_node_load_PATH" "$install_dir/bin/yarn" install --network-timeout 1000000000
+	ynh_exec_warn_less ynh_exec_as "$app" env "$ynh_node_load_PATH" "$install_dir/bin/yarn" cache clean
+	ynh_exec_warn_less ynh_exec_as "$app" env "$ynh_node_load_PATH" "$install_dir/bin/yarn" build
 popd
 
 #=================================================
